--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ input[type="password"] {
 
 .regisztracio {
     width: 50%;
-    border-radius: 15px;
+    border-radius: 25px;
     color: var(--alapszin);
     background-color: var(--toplista);
     margin: 20px;
@@ -105,22 +105,38 @@ input[type="password"] {
     text-align: center;
     margin: 0 auto;
     float: none;
+    border-radius: 25px;
 }
 
 .form-label {
     color: var(--alapszin);
-    text-align: center;
-    display: inline-block;
-    width: 150px;
+    display: grid;
+    place-items: center;
+    padding-bottom: 15px;
 }
 
 .bejelentkezes {
     width: 50%;
-    border-radius: 15px;
+    border-radius: 25px;
     color: var(--alapszin);
     background-color: var(--regisztracio);
     margin: 20px;
     height: 40px;
+}
+
+.valid-feedback {
+    display: grid;
+    place-items: center;
+}
+
+.invalid-feedback {
+    display: grid;
+    place-items: center;
+}
+
+.button .bejelentkezes {
+    display: grid;
+    place-items: center;
 }
 
 
@@ -136,49 +152,37 @@ input[type="password"] {
 }
 
 table {
-    margin-left: auto;
-    margin-right: auto;
+    border-collapse: separate;
+    border-spacing: 0 1em;
     font-size: 12pt;
     color: var(--alapszin);
-    border: 3px black solid;
-    border-radius: 15px;
-    padding-right: 10px;
-    padding-left: 10px;
+    border-radius: 25px;
 }
 
 th {
     text-align: left;
     color: var(--toplista);
-    padding-right: 15px;
-    padding-left: 10px;
     padding-bottom: 5px;
     margin-bottom: 100px;
 }
 
 tr {
-    border-collapse: collapse;
-    height: 50px;
     background-color: var(--toplista);
-    border-spacing: 15em;
 }
 
 td {
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-bottom: 5px;
-    margin-left: 0pt;
-    text-align: center;
-    border-top: solid 1px black;
-    border-bottom: solid 2px black;
+    padding-bottom: 15px;
     border-image: url(./borders/bottom.jpg);
     width: 100%;
 }
 
 td.spacer {
-    padding-right: 20px;
+    padding-left: 30px;
 }
 
 td.roundleft {
+    margin-left: 10px;
+    padding-left: 0px;
     border-left: 1px solid;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
@@ -187,6 +191,7 @@ td.roundleft {
     -moz-border-radius-bottomleft: 15px;
     /* Firefox bottom left corner */
     width: 33.3333%;
+    padding-left: 30px;
 }
 
 td.roundright {
@@ -198,6 +203,7 @@ td.roundright {
     border-bottom-right-radius: 15px;
     border-right: 2px solid;
     width: 33.3333%;
+    padding-right: 30px;
 }
 
 
@@ -210,6 +216,7 @@ td.roundright {
     margin-bottom: 10px;
     margin-top: 20px;
     border-radius: 15px;
+    height: 40px;
 }
 
 .szurke {
@@ -239,9 +246,16 @@ td.roundright {
 .kerdes {
     color: var(--alapszin);
     text-align: center;
+    margin-top: 125px;
+    margin-bottom: 125px;
 }
 
 .cerkomajom {
     color: var(--alapszin);
     text-align: center;
+    margin-bottom: 50px;
+}
+
+.valaszok:hover {
+    background-color: var(--regisztracio);
 }
